[package]
name = "libwild-proxy"
description = "A library that provides a fast Linux linker"
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
libwild = { git = "https://github.com/davidlattimore/wild", branch = "main" }
anyhow = "1.0"
pretty_assertions = "1.4.1"
shellwords = "1.1.0"
