[package]
name = "libwild-proxy"
description = "A library that provides a fast Linux linker"
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
libwild = { git = "https://github.com/davidlattimore/wild", branch = "main" }
shell-words = "1.1.0"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
